card alignment fix

--- a/index.html
+++ b/index.html
@@ -677,9 +677,9 @@
           are worked more than a month, and projects that are less interesting and course related is not shown in the
           list. You can navigate to education section for the related course project.
         </p>
-        <div class="row">
+        <div class="row mb-4">
           <div class="col-lg-4">
-            <div class="card mb-4">
+            <div class="card h-100">
               <img class="card-img-top" src="assets/img/indoor-service-robot.jpg"
                 style="height: 500px; object-fit: contain;" alt="Indoor service robot">
               <div class="card-body">
@@ -694,7 +694,7 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="card mb-4">
+            <div class="card h-100">
               <img class="card-img-top" src="assets/img/directed-graph.png" style="height: 500px; object-fit: contain;"
                 alt="Directed Graph Display">
               <div class="card-body">
@@ -710,7 +710,7 @@
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="card mb-4">
+            <div class="card h-100">
               <img class="card-img-top" src="assets/img/urology_app.png" style="height: 500px; object-fit: contain;"
                 alt="Urology App">
               <div class="card-body">
@@ -734,9 +734,9 @@
           </button>
         </div>
         <div class="collapse" id="collapseProjectList">
-          <div class="row">
+          <div class="row mb-4">
             <div class="col-lg-4">
-              <div class="card mb-4">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/cutsha.png" style="height: 300px; object-fit: contain;"
                   alt="Cutsha">
                 <div class="card-body">
@@ -753,7 +753,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="card mb-4">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/vision_test.png" style="height: 300px; object-fit: contain;"
                   alt="Vision Test">
                 <div class="card-body">
@@ -769,7 +769,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="card mb-4">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/hearing.png" style="height: 300px; object-fit: contain;"
                   alt="Urology App">
                 <div class="card-body">
@@ -787,9 +787,9 @@
             </div>
           </div>
 
-          <div class="row">
+          <div class="row mb-4">
             <div class="col-lg-4">
-              <div class="card mb-4">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/robocon2020_robot.png"
                   style="height: 300px; object-fit: contain;" alt="Robocon">
                 <div class="card-body">
@@ -804,7 +804,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="card mb-4">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/robocon2019_robot.png"
                   style="height: 300px; object-fit: contain;" alt="Vision Test">
                 <div class="card-body">
@@ -820,7 +820,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="card mb-4">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/ROV.png" style="height: 300px; object-fit: contain;"
                   alt="Urology App">
                 <div class="card-body">
@@ -836,9 +836,9 @@
             </div>
           </div>
 
-          <div class="row">
+          <div class="row mb-4">
             <div class="col-lg-4">
-              <div class="card mb-4">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/cityhunt.png" style="height: 300px; object-fit: contain;"
                   alt="Robocon">
                 <div class="card-body">
@@ -852,7 +852,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="card mb-4">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/Big Data 5003.png" style="height: 300px; object-fit: contain;"
                   alt="Vision Test">
                 <div class="card-body">
@@ -867,7 +867,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="card mb-4">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/CV 5016.png" style="height: 300px; object-fit: contain;"
                   alt="Urology App">
                 <div class="card-body">
@@ -885,7 +885,7 @@
 
           <div class="row">
             <div class="col-lg-4">
-              <div class="card mb-4">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/Smart Contract.png"
                   style="height: 300px; object-fit: contain;" alt="Vision Test">
                 <div class="card-body">
@@ -900,7 +900,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="card mb-4">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/tic-tac-toe.png" style="height: 300px; object-fit: contain;"
                   alt="Robocon">
                 <div class="card-body">
@@ -915,7 +915,7 @@
               </div>
             </div>
             <div class="col-lg-4">
-              <div class="card mb-4">
+              <div class="card h-100">
                 <img class="card-img-top" src="assets/img/3D Game Booth.png" style="height: 300px; object-fit: contain;"
                   alt="Robocon">
                 <div class="card-body">
@@ -1031,7 +1031,7 @@
         </div>
         <div class="row">
           <div class="col-lg-4">
-            <div class="card" data-aos="zoom-out-up">
+            <div class="card h-100" data-aos="zoom-out-up">
               <img src="assets/img/talent_scholarship.jpg" class="card-img-top" style="max-height: 500px;" />
               <div class="card-body">
                 <h5 class="card-title">Talent Scholarship by HKSAR 2019 & 2020</h5>
@@ -1043,7 +1043,7 @@
           </div>
 
           <div class="col-lg-4">
-            <div class="card" data-aos="zoom-in-up">
+            <div class="card h-100" data-aos="zoom-in-up">
               <img src="assets/img/mind-drive.jpg" class="card-img-top" style="max-height: 500px;" />
               <div class="card-body">
                 <h5 class="card-title">Mind Drive Champion 2014</h5>
@@ -1056,7 +1056,7 @@
           </div>
 
           <div class="col-lg-4">
-            <div class="card" data-aos="zoom-out-up">
+            <div class="card h-100" data-aos="zoom-out-up">
               <img src="assets/img/ridiy_img.jpg" class="card-img-top" style="max-height: 500px;" />
               <div class="card-body">
                 <h5 class="card-title">RIDIY Champion 2014</h5>
@@ -1301,7 +1301,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="zoom-out-up">
-            <div class="card">
+            <div class="card h-100">
               <img
                 src="https://thumbs.dreamstime.com/b/google-headquarters-buildings-logo-mountain-vew-california-usa-aug-multinational-corporation-specializing-internet-183056909.jpg"
                 class="card-img-top" />
@@ -1317,7 +1317,7 @@
           </div>
 
           <div class="col-lg-4" data-aos="zoom-in-up">
-            <div class="card">
+            <div class="card h-100">
               <img src="https://i.ytimg.com/vi/FzcfZyEhOoI/maxresdefault.jpg" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title">Apple</h5>
@@ -1331,7 +1331,7 @@
           </div>
 
           <div class="col-lg-4" data-aos="zoom-out-up">
-            <div class="card">
+            <div class="card h-100">
               <img src="https://iv1.lisimg.com/image/11489391/640full.jpg" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title">Robotics Company in Japan</h5>
