--- a/index.html
+++ b/index.html
@@ -614,11 +614,63 @@
 
       </div>
     </section><!-- End Resume Section -->
-    <!-- ======= Skill Section ======= -->
-    <section id="skill" class="skill">
+    <section id="skill" class="skills">
       <div class="container">
         <div class="section-title">
-          <h2>Skills</h2>
+          <h2>Skiils</h2>
+          <p>The first part will be a short overview to my skill, and the second part will be the details of my skill.
+          </p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up">
+            <div class="icon"><i class="bi bi-alt"></i></div>
+            <h4 class="title">Technical</h4>
+            <p class="description">Graduated in <b>Computer Science major</b> and <b>Information Engineer minor</b>.
+              <b>Coding</b> was
+              started at the <b>age of 10</b>, with work done on <b>robotics</b> and <b>embedded systems</b>. Works on
+              <b>full-stack
+                development</b>,
+              including <b>web</b>, <b>mobile</b>, <b>back-end</b>, and <b>cloud</b>, has been done on since the <b>age of
+              18</b>. Experience in
+              <b>mechanical assembly</b>, including <b>aluminium drilling</b> and <b>carpentry</b>, and along with
+              <b>electronic circuit</b> has
+              been gained since the <b>age of 21</b>.
+            </p>
+          </div>
+          <div class="col-lg-6 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon"><i class="bi bi-flag"></i></div>
+            <h4 class="title">Coaching</h4>
+            <p class="description">Newcomers in the fields of <b>software engineering</b>, <b>artificial
+                intelligence</b>, and
+              <b>robotics</b> are coached. Related experience includes being <b>the CUHK Robocon Software Team Manager</b> in
+              2019 and 2020, working as an <b>AI STEM Workshop Tutor for the Innovation and Technology Student Club (ITSC)</b>,
+              and providing <b>1 to 1 software tutoring</b>. AI STEM Workshop got the most positive feedback among all
+              tutorials I have given.
+            </p>
+          </div>
+          <div class="col-lg-6 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon"><i class="bi bi-megaphone"></i></div>
+            <h4 class="title">Public Speaking</h4>
+            <p class="description">Speaking <b>in front of the camera</b>, <b>media</b>, and at <b>press conferences</b> is an area where I
+              have experience. I have been involved in various events such as the <b>RTHK Robocon Program</b>, where I
+              was an interviewee; <b>the City I&T Grand Challenge Workshop</b>, and <b>the World Artificial Intelligence
+              Conference</b>, where I was the speaker.
+            </p>
+          </div>
+          <div class="col-lg-6 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+            <div class="icon"><i class="bi bi-menu-down"></i></div>
+            <h4 class="title">Management</h4>
+            <p class="description"><b>Leading</b> and <b>managing teams</b> of different sizes has been an experience since my
+              university life.
+              In 2020, I led a <b>team of 20</b> as the <b>ROV team lead</b>, <b>managing planning</b>, <b>cost</b> and <b>labor</b>, as well as <b>tracking
+              progress under pandemic situation</b>. I have also <b>led</b> and <b>managed</b> projects with a <b>team size of 5</b> during my
+              <b>full-time works</b> at HKCLR and
+              FlyFarm, and <b>working with cross-functional teams</b>.</p>
+          </div>
+        </div>
+        <div class="section-title">
+          <h2>Details</h2>
         </div>
         <table class="table">
           <thead>
@@ -654,11 +706,6 @@
                 Application (Electron)<br>
                 Blockchain - Smart Contract (Ganche, Solidity)</br>
                 Others (Git, Docker)</td>
-
-            </tr>
-            <tr>
-              <th scope="row">Non-sw skills</th>
-              <td> Self-motivated, Planning, Leadership, Coaching, Public Speaking, Research</td>
             </tr>
           </tbody>
         </table>
