--- a/index.html
+++ b/index.html
@@ -631,8 +631,9 @@
               started at the <b>age of 10</b>, with work done on <b>robotics</b> and <b>embedded systems</b>. Works on
               <b>full-stack
                 development</b>,
-              including <b>web</b>, <b>mobile</b>, <b>back-end</b>, and <b>cloud</b>, has been done on since the <b>age of
-              18</b>. Experience in
+              including <b>web</b>, <b>mobile</b>, <b>back-end</b>, and <b>cloud</b>, has been done on since the <b>age
+                of
+                18</b>. Experience in
               <b>mechanical assembly</b>, including <b>aluminium drilling</b> and <b>carpentry</b>, and along with
               <b>electronic circuit</b> has
               been gained since the <b>age of 21</b>.
@@ -643,8 +644,10 @@
             <h4 class="title">Coaching</h4>
             <p class="description">Newcomers in the fields of <b>software engineering</b>, <b>artificial
                 intelligence</b>, and
-              <b>robotics</b> are coached. Related experience includes being <b>the CUHK Robocon Software Team Manager</b> in
-              2019 and 2020, working as an <b>AI STEM Workshop Tutor for the Innovation and Technology Student Club (ITSC)</b>,
+              <b>robotics</b> are coached. Related experience includes being <b>the CUHK Robocon Software Team
+                Manager</b> in
+              2019 and 2020, working as an <b>AI STEM Workshop Tutor for the Innovation and Technology Student Club
+                (ITSC)</b>,
               and providing <b>1 to 1 software tutoring</b>. AI STEM Workshop got the most positive feedback among all
               tutorials I have given.
             </p>
@@ -652,21 +655,26 @@
           <div class="col-lg-6 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-megaphone"></i></div>
             <h4 class="title">Public Speaking</h4>
-            <p class="description">Speaking <b>in front of the camera</b>, <b>media</b>, and at <b>press conferences</b> is an area where I
+            <p class="description">Speaking <b>in front of the camera</b>, <b>media</b>, and at <b>press conferences</b>
+              is an area where I
               have experience. I have been involved in various events such as the <b>RTHK Robocon Program</b>, where I
               was an interviewee; <b>the City I&T Grand Challenge Workshop</b>, and <b>the World Artificial Intelligence
-              Conference</b>, where I was the speaker.
+                Conference</b>, where I was the speaker.
             </p>
           </div>
           <div class="col-lg-6 col-md-6 icon-box aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-menu-down"></i></div>
             <h4 class="title">Management</h4>
-            <p class="description"><b>Leading</b> and <b>managing teams</b> of different sizes has been an experience since my
+            <p class="description"><b>Leading</b> and <b>managing teams</b> of different sizes has been an experience
+              since my
               university life.
-              In 2020, I led a <b>team of 20</b> as the <b>ROV team lead</b>, <b>managing planning</b>, <b>cost</b> and <b>labor</b>, as well as <b>tracking
-              progress under pandemic situation</b>. I have also <b>led</b> and <b>managed</b> projects with a <b>team size of 5</b> during my
+              In 2020, I led a <b>team of 20</b> as the <b>ROV team lead</b>, <b>managing planning</b>, <b>cost</b> and
+              <b>labor</b>, as well as <b>tracking
+                progress under pandemic situation</b>. I have also <b>led</b> and <b>managed</b> projects with a <b>team
+                size of 5</b> during my
               <b>full-time works</b> at HKCLR and
-              FlyFarm, and <b>working with cross-functional teams</b>.</p>
+              FlyFarm, and <b>working with cross-functional teams</b>.
+            </p>
           </div>
         </div>
         <div class="section-title">
@@ -1133,6 +1141,19 @@
           <div class="row" data-aos="fade-up">
             <div>
               <ul class="timeline">
+                <li>
+                  <b>AWS Related Event</b>
+                  <b class="float-end date"> 2023
+                  </b><br>
+                  <em>Details</em>
+                  <ul>
+                    <li>
+                      AWS Awsome Day - <a href="assets/file/AWSome Day_Certificate-of-Attendance.pdf">Certificate</a>
+                    </li>
+                    <li>AWS Summit Hong Kong
+                    </li>
+                  </ul>
+                </li>
                 <li>
                   <b>First Tech Challenge (FTC) - Judge Helper</b>
                   <b class="float-end date"> 2023
