Embarrassing Spelling Mistake Fix

--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
     <section id="skill" class="skills">
       <div class="container">
         <div class="section-title">
-          <h2>Skiils</h2>
+          <h2>Skills</h2>
           <p>The first part will be a short overview to my skill, and the second part will be the details of my skill.
           </p>
         </div>
