--- a/index.html
+++ b/index.html
@@ -1142,6 +1142,23 @@
             <div>
               <ul class="timeline">
                 <li>
+                  <b>CUHK Robocon Team - Consultant</b>
+                  <b class="float-end date"> 2023
+                  </b><br>
+                  <em>Related news</em>
+                  <ul>
+                    <li><a
+                        href="https://www.youtube.com/watch?v=uAKAmgR6NWo&ab_channel=ROBOCONOfficial%5Brobotcontest%5D"
+                        target="_blank">ABU Robocon 2023 Live</a>
+                    </li>
+                  </ul>
+                </li>
+                 <li>
+                  <b>Google Containerized Application Hands-on Workshop </b>
+                  <b class="float-end date"> 2023
+                  </b>
+                </li>
+                <li>
                   <b>AWS Related Event</b>
                   <b class="float-end date"> 2023
                   </b><br>
