--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
             </p>
             <p>
               Eager to learn and make breakthroughs, I have been making progress in fields of computer science,
-              particularly in computer vision, big data and embedded software. Skilled in C/C++/Python.
+              particularly in distributed system, big data and embedded software. Skilled in C/C++/Python, and interested
+              in robotics, medical, and green technology fields.
             </p>
             <p>
               Apart from Hong Kong, I also open to opportunities not limited to work or PhD opportunities
@@ -1153,7 +1154,7 @@
                     </li>
                   </ul>
                 </li>
-                 <li>
+                <li>
                   <b>Google Containerized Application Hands-on Workshop </b>
                   <b class="float-end date"> 2023
                   </b>
