--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
             </p>
             <p>
               Eager to learn and make breakthroughs, I have been making progress in fields of computer science,
-              particularly in distributed system, big data and embedded software. Skilled in C/C++/Python, and interested
+              particularly in distributed system, big data and embedded software. Skilled in C/C++/Python, and
+              interested
               in robotics, medical, and green technology fields.
             </p>
             <p>
