--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                 <li>Implemented front-end application with web technologies HTML, CSS, JS and mobile Flutter.</li>
                 <li>Details: <a href="https://www.hkclr.hk/unmannedvehicles" target="_blank">Indoor service robot
                     project</a>, <a href="assets/file/HKCLR/Demo.pdf" target="_blank">ppt
-                  </a>, <a href="https://drive.google.com/file/d/1Qv_m4ATuxvK-VuG3VXtCS_FaArG8BWjy/view?usp=sharing"
+                  </a>, <a href="https://www.youtube.com/watch?v=sR-7Ncvzov8&ab_channel=%E6%9E%97%E6%8C%AF%E9%9C%86"
                     target="_blank">Demo Video
                   </a></li>
               </ul>
