update google event

--- a/index.html
+++ b/index.html
@@ -1156,9 +1156,16 @@
                   </ul>
                 </li>
                 <li>
-                  <b>Google Containerized Application Hands-on Workshop </b>
+                  <b>Google Related Event</b>
                   <b class="float-end date"> 2023
-                  </b>
+                  </b><br>
+                  <em>Details</em>
+                  <ul>
+                    <li>Containerized Application Hands-on Workshop
+                    </li>
+                    <li>Dev Fest 2023 - GDG Hong Kong: AI Everywhere
+                    </li>
+                  </ul>
                 </li>
                 <li>
                   <b>AWS Related Event</b>
