--- a/index.html
+++ b/index.html
@@ -961,12 +961,13 @@
                 <img class="card-img-top" src="assets/img/tic-tac-toe.png" style="height: 300px; object-fit: contain;"
                   alt="Robocon">
                 <div class="card-body">
-                  <h5 class="card-title">AI Tic-Tac-Toe</h5>
+                  <h5 class="card-title">AI Robocon 2024 Silo Game</h5>
                   <p class="card-text">
                     Simple console game written in python3, along with machine learning reinforcement learning.
-                    Self-interested project for machine learning studie`s.
+                    Self-interested project for machine learning studies and hope to inspire the Robocon community. The
+                    project is developed and inspired from Tic-Tac-Toe.
                   </p>
-                  <a href="https://github.com/jeff214103/Tic-Tac-Toe-Reinforcement-Learning"
+                  <a href=https://github.com/jeff214103/Robocon2024-Silo-Game-Reinforcement-Learning"
                     class="btn btn-custom-green" target="_blank">Github</a>
                 </div>
               </div>
