Update google achievement

--- a/index.html
+++ b/index.html
@@ -1165,6 +1165,8 @@
                     <li>Containerized Application Hands-on Workshop
                     </li>
                     <li>Dev Fest 2023 - GDG Hong Kong: AI Everywhere
+                    </li><li>
+                      Google Technical Series - <a href="assets/file/google_technical_series_cert.pdf">Certificate</a>
                     </li>
                   </ul>
                 </li>
