--- a/index.html
+++ b/index.html
@@ -1145,6 +1145,18 @@
             <div>
               <ul class="timeline">
                 <li>
+                  <b>Google Asia Pacific AI Summit - <a
+                    href="https://www.credential.net/cdb47163-fd62-4ffb-84f3-305f4dd5ad94#gs.4gnk2q"
+                    target="_blank">Credential</a></b>
+                  <b class="float-end date"> 2024
+                  </b>
+                </li>
+                <li>
+                  <b>First Tech Challenge (FTC) - Judge</b>
+                  <b class="float-end date"> 2024
+                  </b>
+                </li>
+                <li>
                   <b>CUHK Robocon Team - Consultant</b>
                   <b class="float-end date"> 2023
                   </b><br>
