--- a/index.html
+++ b/index.html
@@ -1145,6 +1145,13 @@
             <div>
               <ul class="timeline">
                 <li>
+                  <b>Google Best of Next '24 - <a
+                    href="https://www.credential.net/99d966d6-e6ee-4eb7-8408-0dbcf301a198"
+                    target="_blank">Credential</a></b>
+                  <b class="float-end date"> 2024
+                  </b>
+                </li>
+                <li>
                   <b>Google Asia Pacific AI Summit - <a
                     href="https://www.credential.net/cdb47163-fd62-4ffb-84f3-305f4dd5ad94#gs.4gnk2q"
                     target="_blank">Credential</a></b>
