--- a/index.html
+++ b/index.html
@@ -1145,16 +1145,35 @@
             <div>
               <ul class="timeline">
                 <li>
-                  <b>Google Best of Next '24 - <a
-                    href="https://www.credential.net/99d966d6-e6ee-4eb7-8408-0dbcf301a198"
-                    target="_blank">Credential</a></b>
+                  <b>CUHK Robocon Team - Consultant</b>
+                  <b class="float-end date"> 2021 - 2024
+                  </b><br>
+                  <em>Related news</em>
+                  <ul>
+                    <li><a
+                        href="https://www.youtube.com/watch?v=GEz8ktGMHKE&t=35467s&ab_channel=ROBOCONOfficial%5Brobotcontest%5D"
+                        target="_blank">ABU Robocon 2022 Live</a>
+                    </li>
+                    <li><a
+                        href="https://www.youtube.com/watch?v=uAKAmgR6NWo&ab_channel=ROBOCONOfficial%5Brobotcontest%5D"
+                        target="_blank">ABU Robocon 2023 Live</a>
+                    </li>
+                    <li><a
+                        href="https://www.youtube.com/watch?v=XZuQFD4nzik"
+                        target="_blank">ABU Robocon 2024 Live</a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <b>Google Best of Next '24 - <a href="https://www.credential.net/99d966d6-e6ee-4eb7-8408-0dbcf301a198"
+                      target="_blank">Credential</a></b>
                   <b class="float-end date"> 2024
                   </b>
                 </li>
                 <li>
                   <b>Google Asia Pacific AI Summit - <a
-                    href="https://www.credential.net/cdb47163-fd62-4ffb-84f3-305f4dd5ad94#gs.4gnk2q"
-                    target="_blank">Credential</a></b>
+                      href="https://www.credential.net/cdb47163-fd62-4ffb-84f3-305f4dd5ad94#gs.4gnk2q"
+                      target="_blank">Credential</a></b>
                   <b class="float-end date"> 2024
                   </b>
                 </li>
@@ -1162,18 +1181,6 @@
                   <b>First Tech Challenge (FTC) - Judge</b>
                   <b class="float-end date"> 2024
                   </b>
-                </li>
-                <li>
-                  <b>CUHK Robocon Team - Consultant</b>
-                  <b class="float-end date"> 2023
-                  </b><br>
-                  <em>Related news</em>
-                  <ul>
-                    <li><a
-                        href="https://www.youtube.com/watch?v=uAKAmgR6NWo&ab_channel=ROBOCONOfficial%5Brobotcontest%5D"
-                        target="_blank">ABU Robocon 2023 Live</a>
-                    </li>
-                  </ul>
                 </li>
                 <li>
                   <b>Google Related Event</b>
@@ -1184,7 +1191,8 @@
                     <li>Containerized Application Hands-on Workshop
                     </li>
                     <li>Dev Fest 2023 - GDG Hong Kong: AI Everywhere
-                    </li><li>
+                    </li>
+                    <li>
                       Google Technical Series - <a href="assets/file/google_technical_series_cert.pdf">Certificate</a>
                     </li>
                   </ul>
@@ -1207,18 +1215,7 @@
                   <b class="float-end date"> 2023
                   </b>
                 </li>
-                <li>
-                  <b>CUHK Robocon Team - Observer</b>
-                  <b class="float-end date"> 2022
-                  </b><br>
-                  <em>Related news</em>
-                  <ul>
-                    <li><a
-                        href="https://www.youtube.com/watch?v=GEz8ktGMHKE&t=35467s&ab_channel=ROBOCONOfficial%5Brobotcontest%5D"
-                        target="_blank">ABU Robocon 2022 Live</a>
-                    </li>
-                  </ul>
-                </li>
+
                 <li>
                   <b>VEX IQ held by CUHK - Judge</b>
                   <b class="float-end date"> 2022
