--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>27</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Hong Kong</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Valid Work Visa:</strong> <span>Canada, British</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Vancouver, BC, Canada</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Valid Work Visa:</strong> <span>Hong Kong, Canada, British</span>
                   </li>
                 </ul>
               </div>
