--- a/index.html
+++ b/index.html
@@ -542,9 +542,9 @@
             <h3 class="resume-title">Working Experience</h3>
             <div class="resume-item">
               <h4>Software Engineer</h4>
-              <h5>Jul 2022 - Present</h5>
+              <h5>Jul 2022 - Aug 2024 -> Present</h5>
               <p><em><a href="https://flyfarm.com/" target="_blank">FLYFARM</a>, Hong
-                  Kong</em></p>
+                  Kong -> Canada</em></p>
               <ul>
                 <li>Analyzed competitors and stack-holders needs for cost effective and user-friendly the software
                   system.
